--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,10 +4,10 @@ html{
 }
 
 body {
-   background-image: url('../assets/noche-cielo.jpg');
+   background-image: url('https://www.xtrafondos.com/wallpapers/resized/noche-cielo-estrellas-y-cometa-3036.jpg?s=large');
    background-repeat: no-repeat;
    background-size: 100% 100vh;
-  background-attachment: fixed;
+   background-attachment: fixed;
    height: 100vh;
 }
 
